plugins {
    id 'java-library'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(16)
    }
}

group = "com.github.filipmalczak"
version = '0.0.1-SNAPSHOT'

repositories {
  mavenCentral()
}

dependencyManagement {
    dependencies {
        dependency 'org.projectlombok:lombok:1.18.20'
        dependency 'org.junit.jupiter:junit-jupiter-api:5.8.1'
        dependency 'org.junit.jupiter:junit-jupiter-engine:5.8.1'


        dependency 'org.dizitart:nitrite:3.4.4'

        dependency group: 'org.slf4j', name: 'slf4j-api', version: '1.7.32'
        dependency 'org.apache.logging.log4j:log4j-slf4j-impl:2.14.1'
        dependency 'org.apache.logging.log4j:log4j-api:2.14.1'

        //todo I hate bringing it in just for a single method (delete dir)
        // https://mvnrepository.com/artifact/commons-io/commons-io
        dependency 'commons-io:commons-io:2.11.0'


        dependency 'com.google.code.gson:gson:2.8.9'
        dependency 'io.github.glytching:junit-extensions:2.5.0'

        dependency 'com.google.flogger:flogger-slf4j-backend:0.7.2'
        dependency 'com.google.flogger:flogger:0.7.2'

        dependency 'org.valid4j:valid4j:0.5.0'

    }

}

dependencies {
    implementation 'com.google.code.gson:gson'

    implementation 'org.dizitart:nitrite'

    compileOnly 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    implementation 'com.google.flogger:flogger'
    //todo migrate to flogger
    implementation group: 'org.slf4j', name: 'slf4j-api'

    //todo these should be optional? or maybe its enough to move this to testImpl?
    implementation 'com.google.flogger:flogger-slf4j-backend'
    testImplementation 'org.apache.logging.log4j:log4j-api'

    implementation 'commons-io:commons-io'

    implementation 'org.valid4j:valid4j'

    runtimeOnly 'org.apache.logging.log4j:log4j-slf4j-impl'
    testRuntimeOnly 'org.apache.logging.log4j:log4j-slf4j-impl'

    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'

}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

wrapper {
    gradleVersion = "7.1.1"
    distributionType = Wrapper.DistributionType.ALL
}
